src/test/resources/reject/statementAsIfExpression.ul
int bar ()
{
    int id1;

    if (true;) {
        id1 = "hello";
    }
}
